--- a/views/public/index.html
+++ b/views/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Blog</title>
+    <title>Shop</title>
+    <link rel="stylesheet" href="./common.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
