--- a/views/public/common.css
+++ b/views/public/common.css
@@ -4,6 +4,10 @@
     text-decoration: none; list-style: none;
 }
 
+body{
+    min-height: 100vh;
+}
+
 .center{
     display: flex; align-items: center; justify-content: center;
 }
