--- a/views/src/Layout/Main.css
+++ b/views/src/Layout/Main.css
@@ -1,5 +1,5 @@
 header{
-    width: 100%; height: auto;
+    width: 100%; height: auto; border-bottom: 1px solid black;
 }
 nav{
     width: 100%;
@@ -9,17 +9,17 @@ nav{
 /* Top Section */
 .header.top.outer{
     width: 95%;
-    margin: 10px 0;
+    padding: 10px 0;
     margin-top: 20px;
     display: flex;
     align-items: center;
 }
 .logo.outer{
-    margin-right: 60px;
+    margin-right: 30px;
 }
 .logo.outer a{
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .header.search_bar.outer{
@@ -27,9 +27,10 @@ nav{
     height: 30px;
 }
 .header.search_bar.outer form input, .header.search_bar.outer form{height: 100%; width: 100%;}
-/* .header.search_bar.outer form input{
-    border-radius: 0;
-} */
+.header.search_bar.outer form input{
+    outline: black 1px solid; border: 0;
+    background-color: rgb(248, 248, 248);
+}
 .header.search_bar.outer input:focus{
     outline: blue 1px solid; border: 0;
 }
@@ -42,14 +43,22 @@ nav{
 
 /* Bottom Section */
 .header.bottom.outer{
-    margin-top: 20px; margin-bottom: 10px;
+    border-top: 1px solid black;
+    padding-top: 10px; padding-bottom: 10px;
     width: 95%;
     display: flex; flex-direction: row;
 }
 .header.categories{
     display: flex;
 }
-.header.categories>li{margin-right: 50px;}
+.header.categories a {
+    font-weight: 500;
+}
+.header.categories a:hover{
+    border-bottom: 2px solid black;
+}
+.header.categories>li{margin-right: 30px;}
 .header.bottom.misc_text{
     margin-left: auto;
 }
+.header.misc_text p{font-weight: 500;}
