--- a/views/src/Pages/Home/Landing.css
+++ b/views/src/Pages/Home/Landing.css
@@ -1,10 +1,46 @@
 
 .landing.image.outer{
-    width: 100%; height: 80vh; max-height: 800px; min-height: 500px;
+    width: 100%; height: 80vh; max-height: 1000px; min-height: 600px;
     overflow: hidden;
     position: relative;
+    background-color: black;
 }
 .landing.image.outer img{
-    width: 100%;
-    position: absolute; 
+    width: 1600px;
+    position: absolute;  z-index: 9;
+    transform: translateY(5%)
+}
+
+.landing.text.outer{
+    height: 100%;
+    position: absolute;
+    left: 0; z-index: 99;
+    display:flex; justify-content: center; align-items: center;
+    flex-direction: column;
+}
+
+.landing.text.outer h2{
+    font-size: 3em; color: white; display: none;
+}
+
+
+/* Alt screens */
+@media all and (min-width: 1700px){
+    .landing.image.outer img{
+        width: 1980px;
+        position: absolute;
+        transform: translateY(5%)
+    }
+}
+
+@media all and (max-width: 1150px){
+    .landing.image.outer img{
+        width: 1500px;
+    }
+}
+
+@media all and (max-width: 650px){
+    .landing.image.outer img{
+        transform: translate(3%, 5%)
+    }
 }
