--- a/views/src/Layout/Main.css
+++ b/views/src/Layout/Main.css
@@ -27,13 +27,30 @@ nav{
     height: 30px;
 }
 .header.search_bar.outer form input, .header.search_bar.outer form{height: 100%; width: 100%;}
-.header.search_bar.outer form input{
+.header.search_bar.outer form {
     outline: black 1px solid; border: 0;
     background-color: rgb(248, 248, 248);
 }
-.header.search_bar.outer input:focus{
+.header.search_bar.outer form:focus{
     outline: blue 1px solid; border: 0;
 }
+.header.search_bar.outer input:focus,.header.search_bar.outer input{
+    background-color: rgb(248, 248, 248);
+    width: 95%; border: 0; outline: 0;
+}
+
+.header.action_list.outer button{
+    background-color: transparent; 
+    outline: 0; border: 0;
+    cursor: pointer;
+}
+.header.action_list.outer button:focus{
+    outline: black 2px solid;
+}
+.header.action_list.outer img{
+    height: 30px; width: auto;
+}
+
 
 .header.action_list.outer{
     margin-left: auto;
@@ -54,8 +71,9 @@ nav{
 .header.categories a {
     font-weight: 500;
 }
-.header.categories a:hover{
+.header.categories a:hover, .header.header.categories a:focus{
     border-bottom: 2px solid black;
+    outline: none;
 }
 .header.categories>li{margin-right: 30px;}
 .header.bottom.misc_text{
