Added a skeleton footer among other changes.

--- a/views/src/Pages/Home/Collections.css
+++ b/views/src/Pages/Home/Collections.css
@@ -8,7 +8,7 @@
 .collections.collection_wrap.outer{
     height: 500px; width: 40%;
     background-color: black;
-    transition: width ease-out 200ms;
+    transition: width 200ms ease-out;
     margin: 70px 0;
     overflow: hidden;
     flex-shrink: 1;
@@ -28,10 +28,10 @@
     transform: translateY(15%)
 }
 .collections.container.inner.animate-now>a:first-child{
-    transition: transform ease-out 0.4s, width ease-out 100ms;
+    transition: transform 0.4s ease-out , width 100ms ease-out ;
     transform: translateY(0)
 }
 .collections.container.inner.animate-now>a:last-child{
-    transition: transform ease-out 0.4s 0.2s, width ease-out 100ms;
+    transition: transform 0.4s ease-out 0.2s, width 100ms ease-out;
     transform: translateY(0)
 }
