--- a/views/public/index.html
+++ b/views/public/index.html
@@ -9,6 +9,6 @@
     <script src="./common.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" aria-label="Body"></div>
   </body>
 </html>
