--- a/views/src/Layout/Main.css
+++ b/views/src/Layout/Main.css
@@ -6,6 +6,47 @@ nav{
     flex-direction: column;
 }
 
+/* Footer=============== */
+/* Top section */
+footer{width: 100%; display: flex; flex-direction: column; align-items: center; background-color: rgb(198, 198, 198);}
+footer .top_section.outer{
+    width: 100%; height: 200px;
+    display: flex; justify-content: center; align-items: center;
+    background-color: black;
+    display: flex;
+}
+footer .top_section.outer>*{
+    color: white;
+    font-size: 0.9em;
+}
+footer .top_section.outer h4{
+    font-weight: 700;
+    width: 10%;
+}
+footer .top_section.outer p{
+    width: 70%;
+    margin-left: auto;
+    display: flex; align-items: center;
+    height: 100%;
+}
+
+/* Bottom section */
+footer .bottom_section.outer{
+    width: 85%;
+    margin-top: 80px; margin-bottom: 30px;
+    border-bottom: 1px solid rgb(37, 37, 37);
+    display: flex; justify-content: space-between;
+}
+footer .bottom_section.outer ul{
+    display: flex; flex-direction: column; align-items: center;
+    margin-bottom: 30px;
+}
+footer .bottom_section.outer a{font-size: 0.8em; color: rgb(29, 29, 29);}
+footer .bottom_section.outer h5{font-size: 0.9em; font-weight: 700; margin-bottom: 5px;}
+footer .bottom_section.outer a:focus{ border-bottom: 1px solid black; outline: 0;}
+footer .bottom_section.outer h5:focus{ outline: 1px solid black;}
+
+/* Header =============== */
 /* Top Section */
 .header.top.outer{
     width: 95%;
@@ -26,16 +67,15 @@ nav{
     width: 60%; min-width: 400px; max-width: 700px;
     height: 30px;
 }
-.header.search_bar.outer form input, .header.search_bar.outer form{height: 100%; width: 100%;}
+.header.search_bar.outer form input, .header.search_bar.outer form{height: 100%; width: 100%; background-color: rgb(246, 246, 246);}
+.header.search_bar.outer form input{width: 95%;}
 .header.search_bar.outer form {
-    outline: black 1px solid; border: 0;
-    background-color: rgb(248, 248, 248);
+    display: flex;justify-content: center;align-items: center;
 }
 .header.search_bar.outer form:focus{
     outline: blue 1px solid; border: 0;
 }
 .header.search_bar.outer input:focus,.header.search_bar.outer input{
-    background-color: rgb(248, 248, 248);
     width: 95%; border: 0; outline: 0;
 }
 
