Before removing main.css from the header

--- a/views/src/Pages/Home/Landing.css
+++ b/views/src/Pages/Home/Landing.css
@@ -43,3 +43,8 @@
         transform: translate(10%, 10%)
     }
 }
+@media all and (max-width: 400px){
+    .landing.image.outer img{
+        transform: translate(15%, 10%)
+    }
+}
