--- a/views/src/Pages/Home/Landing.css
+++ b/views/src/Pages/Home/Landing.css
@@ -1,6 +1,6 @@
 
 .landing.image.outer{
-    width: 100%; height: 80vh; max-height: 1000px; min-height: 600px;
+    width: 100%; max-height: 1000px; min-height: 600px;
     overflow: hidden;
     position: relative;
 }
