Added basic loading screen for home page

--- a/views/public/index.html
+++ b/views/public/index.html
@@ -10,6 +10,61 @@
     <script src="./common.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" aria-label="Body"></div>
+    <div id="root" aria-label="Body">
+      <div id="root" aria-label="Body">
+        <div class="gooey">
+          <span class="dot"></span>
+          <div class="dots">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+      </div>
+      <style>
+        .gooey{
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 142px;
+          height: 40px;
+          margin: -20px 0 0  -71px;    
+        }
+        .gooey .dot{
+          position: absolute;
+          width: 16px;
+          height: 16px;
+          top: 12px;
+          left: 15px;
+          filter: blur(0px);
+          background: #000;
+          border-radius: 50%;
+          transform: translateX(0);
+          animation: dot 2.8s infinite;
+        }
+        .gooey .dots{
+          transform: translateX(0);
+          margin-top: 12px;
+          margin-left: 31px;
+          animation: dots 2.8s infinite;
+        }
+        .gooey .dots span{
+          display: block;
+          float: left;
+          width: 16px;
+          height: 16px;
+          margin-left: 16px;
+          filter: blur(0px);
+          background: #000;
+          border-radius: 50%;
+        }
+        @keyframes dot{
+          50%{transform: translateX(96px)}
+        }
+        @keyframes dots{
+          50%{transform: translateX(-31px)}
+        }
+      </style>
+    </div>
   </body>
 </html>
