--- a/views/src/Layout/MobileHeader.css
+++ b/views/src/Layout/MobileHeader.css
@@ -12,14 +12,15 @@ header.mobile nav{
 header.mobile nav>div{width: 100%;}
 
 header.mobile .logo.outer{
-    width: 80%;
+    width: 90%;
     padding: 20px 0;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     border-bottom: 1px solid black;
+    margin-right: 0;
 }
 
 header.mobile .actions.outer{
-    padding: 5px 0;
+    padding: 10px 0;
     display: flex; 
 }
 header.mobile .actions.outer button{
