--- a/views/src/Layout/Header.css
+++ b/views/src/Layout/Header.css
@@ -21,6 +21,9 @@ nav{
     font-size: 30px;
     font-weight: 400;
 }
+.logo.outer img{
+    height: 30px;
+}
 
 .header.search_bar.outer{
     width: 60%; min-width: 400px; max-width: 700px;
