--- a/views/src/Layout/MobileHeader.css
+++ b/views/src/Layout/MobileHeader.css
@@ -28,10 +28,10 @@ header.mobile .actions.outer button{
     margin: 0 10px;
 }
 header.mobile .actions.outer button:nth-child(1) img{
-    height: 20px; width: auto;
+    height: 25px; width: auto;
 }
 header.mobile .actions.outer button:nth-child(2){
-    margin-left: auto;
+    margin-left: auto; margin-right: 10px;
 }
 header.mobile .actions.outer button img{
     height: 30px; width: 30px;
