IOS header optimization

--- a/views/src/Layout/MobileHeader.css
+++ b/views/src/Layout/MobileHeader.css
@@ -44,5 +44,5 @@ header.mobile .links.outer{
     transition: all 200ms ease-out;
 }
 header.mobile .links.outer#visible{
-    right: 0;
+    transform: translateX(-200px)
 }
