--- a/views/src/Layout/MobileHeader.css
+++ b/views/src/Layout/MobileHeader.css
@@ -47,7 +47,7 @@ header.mobile .links.outer{
 }
 header.mobile .links.outer .links.inner{
     width: 60%; height: 100%;
-    background-color: white;
+    background-color: rgb(230, 227, 227);
 }
 header.mobile .links.outer .clickable{
     width: 40%; height: 100%;
@@ -58,4 +58,26 @@ header.mobile .links.outer#notVisible{
 }
 header.mobile .links.outer#visible{
     transform: translateX(0); 
+}
+
+header.mobile .links.inner{
+    display: flex;align-items: center;justify-content: flex-start;flex-direction: column;
+}
+header.mobile .links.inner h3{
+    margin:30px 0;
+    font-size: 1.2em; font-weight: 600;
+}
+header.mobile .links.inner ul{
+    width: 100%;
+    display: flex;align-items: center;justify-content: center;flex-direction: column;
+}
+header.mobile .links.inner li{
+    width: 80%;
+    height: 2.5em; background-color: rgb(217, 217, 217);;
+    margin-bottom: 10px;
+}
+header.mobile .links.inner li a{
+    display: flex;align-items: center;justify-content: center;
+    height: 100%; width: 100%;
+    border: 1px solid #8f8f8f;
 }
