--- a/views/public/common.css
+++ b/views/public/common.css
@@ -2,7 +2,8 @@
     margin:0; padding: 0;
     font-size: 16px; font-weight: normal; color: black;
     text-decoration: none; list-style: none;
-    font-family: 'Lora', serif;}
+    font-family: 'Raleway', sans-serif;
+}
 
 body{
     min-height: 100vh;
