--- a/views/public/index.html
+++ b/views/public/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">     
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">     
     <script src="./common.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
