--- a/views/src/Pages/Home/Collections.css
+++ b/views/src/Pages/Home/Collections.css
@@ -6,7 +6,7 @@
 }
 
 .collections.collection_wrap.outer{
-    height: 30vw; width: 40%; max-width: 800px;
+    height: 30vw; width: 40%; max-width: 800px; max-height: 500px;
     background-color: black;
     transition: width 200ms ease-out;
     margin: 70px 0;
