--- a/views/src/Layout/Header.css
+++ b/views/src/Layout/Header.css
@@ -1,20 +1,21 @@
 header{
     width: 100%; height: auto;
     background-color:rgb(255, 255, 255);
+    position: fixed; top: 0;
+    z-index: 999;
+    height: 65px;
 }
 nav{
-    width: 100%;
+    width: 100%; height: 100%;
     flex-direction: column;
+    display: flex; align-items: center; flex-direction: row; justify-content: center;
 }
-/* Top Section */
-.header.top.outer{
-    width: 95%;
-    padding: 10px 0;
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
+nav ul{
+    display: flex; gap: 30px;
 }
+
 .logo.outer{
+    margin-left: 20px;
     margin-right: 30px;
 }
 .logo.outer a{
@@ -25,20 +26,8 @@ nav{
     height: 30px;
 }
 
-.header.search_bar.outer{
-    width: 60%; min-width: 400px; max-width: 700px;
-    height: 30px;
-}
-.header.search_bar.outer form input, .header.search_bar.outer form{height: 100%; width: 100%; background-color: rgb(202, 202, 202);}
-.header.search_bar.outer form input{width: 95%;}
-.header.search_bar.outer form {
-    display: flex;justify-content: center;align-items: center;
-}
-.header.search_bar.outer form:focus{
-    outline: blue 1px solid; border: 0;
-}
-.header.search_bar.outer input:focus,.header.search_bar.outer input{
-    width: 95%; border: 0; outline: 0;
+nav ul a{
+    font-weight: 500;
 }
 
 .header.action_list.outer button{
@@ -58,30 +47,7 @@ nav{
 
 
 .header.action_list.outer{
-    margin-left: auto;
+    margin-left: auto; margin-right: 20px;
     display: flex;
 }
 .header.action_list.outer>button:first-child{margin-right: 20px;}
-
-/* Bottom Section */
-.header.bottom.outer{
-    border-top: 1px solid black;
-    padding-top: 10px; padding-bottom: 10px;
-    width: 95%;
-    display: flex; flex-direction: row;
-}
-.header.categories{
-    display: flex;
-}
-.header.categories a {
-    font-weight: 500;
-}
-.header.categories a:hover, .header.header.categories a:focus{
-    border-bottom: 2px solid black;
-    outline: none;
-}
-.header.categories>li{margin-right: 30px;}
-.header.bottom.misc_text{
-    margin-left: auto;
-}
-.header.misc_text p{font-weight: 500;}
