--- a/views/src/Layout/MobileHeader.css
+++ b/views/src/Layout/MobileHeader.css
@@ -1,20 +1,19 @@
 
 header.mobile{
-    background-color: rgb(230, 227, 227);
+    background-color: rgb(255, 255, 255);
     width: 100%;
 }
 
 header.mobile nav{
     width: 100%;
     display: flex; align-items: center; flex-direction: row; justify-content: center;
+    height: 100%;
 }
 
 header.mobile nav>div{width: 100%;}
 
 header.mobile .logo.outer{
     width: 50%;
-    padding: 20px 0;
-    padding-bottom: 10px;
     margin-right: 0;
 }
 
@@ -47,7 +46,7 @@ header.mobile .links.outer{
 }
 header.mobile .links.outer .links.inner{
     width: 60%; height: 100%;
-    background-color: rgb(230, 227, 227);
+    background-color: rgb(255, 255, 255);
 }
 header.mobile .links.outer .clickable{
     width: 40%; height: 100%;
@@ -73,7 +72,7 @@ header.mobile .links.inner ul{
 }
 header.mobile .links.inner li{
     width: 80%;
-    height: 2.5em; background-color: rgb(217, 217, 217);;
+    height: 2.5em; background-color: rgb(236, 236, 236);;
     margin-bottom: 10px;
 }
 header.mobile .links.inner li a{
