--- a/views/public/index.html
+++ b/views/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Shop</title>
-    <link rel="stylesheet" href="./common.css">
+    <link rel="stylesheet" href="/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet"> 
