--- a/views/src/Pages/Search/SearchResults/SearchResults.css
+++ b/views/src/Pages/Search/SearchResults/SearchResults.css
@@ -1,3 +1,9 @@
 .searchresults.outer.container{
-    height: 100px;
+    min-height: 500px;
+}
+
+/* Loading Icon */
+.searchresults.outer.container#SearchResultsLoading{display: flex; justify-content: center; height: 500px;}
+.loader{
+    margin-top: 100px; margin-left: -40px;
 }
