--- a/views/public/index.html
+++ b/views/public/index.html
@@ -11,85 +11,37 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" aria-label="Body">
-      <div class="loader">
-        <div class="item item-1"></div>
-        <div class="item item-2"></div>
-        <div class="item item-3"></div>
-        <div class="item item-4"></div>
-      </div>
+      <span class="loader"></span>
       <style>
         body{
           display: flex; align-items: center; justify-content: center;
         }
         .loader {
-            width: 100px;
-            height: 100px;
-            position: relative;
-          }
-          
-          .item {
-            width: 50px;
-            height: 50px;
-            position: absolute;
-          }
-          
-          .item-1 {
-            background-color:black;
-            top: 0;
-            left: 0;
-            z-index: 1;
-            animation: item-1_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
-          }
-          
-          .item-2 {
-            background-color: rgb(238, 238, 238);
-            top: 0;
-            right: 0;
-            animation: item-2_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
-          }
-          
-          .item-3 {
-            background-color: black;
-            bottom: 0;
-            right: 0;
-            z-index: 1;
-            animation: item-3_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
-          }
-          
-          .item-4 {
-            background-color: rgb(238, 238, 238);
-            bottom: 0;
-            left: 0;
-            animation: item-4_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
-          }
-          
-          @keyframes item-1_move {
-            0%, 100% {transform: translate(0, 0)} 
-            25% {transform: translate(0, 50px)} 
-            50% {transform: translate(50px, 50px)} 
-            75% {transform: translate(50px, 0)} 
-          }
-          
-          @keyframes item-2_move {
-            0%, 100% {transform: translate(0, 0)} 
-            25% {transform: translate(-50px, 0)} 
-            50% {transform: translate(-50px, 50px)} 
-            75% {transform: translate(0, 50px)} 
-          }
-          
-          @keyframes item-3_move {
-            0%, 100% {transform: translate(0, 0)} 
-            25% {transform: translate(0, -50px)} 
-            50% {transform: translate(-50px, -50px)} 
-            75% {transform: translate(-50px, 0)} 
-          }
-          
-          @keyframes item-4_move {
-            0%, 100% {transform: translate(0, 0)} 
-            25% {transform: translate(50px, 0)} 
-            50% {transform: translate(50px, -50px)} 
-            75% {transform: translate(0, -50px)} 
-          }
+              width: 12px;
+              height: 12px;
+              border-radius: 50%;
+              display: block;
+              margin:15px auto;
+              position: relative;
+              color: black;
+              box-sizing: border-box;
+              animation: animloader 1s linear infinite alternate;
+            }
+            
+            @keyframes animloader {
+              0% {
+                box-shadow: -38px -12px ,  -14px 0,  14px 0, 38px 0;
+              }
+              33% {
+                box-shadow: -38px 0px, -14px -12px,  14px 0, 38px 0;
+              }
+              66% {
+                box-shadow: -38px 0px , -14px 0, 14px -12px, 38px 0;
+              }
+              100% {
+                box-shadow: -38px 0 , -14px 0, 14px 0 , 38px -12px;
+              }
+            }
       
     </style>
     </div>
