--- a/views/src/Common/Credentials/Credentials.css
+++ b/views/src/Common/Credentials/Credentials.css
@@ -1,8 +1,40 @@
 
 .credentials.container.outer{
-    position: fixed; z-index: 1000;
-    height: 40vw; width: 40vw; max-height: 500px; min-height: 400px; max-width: 500px; min-width: 500px;
-    top: 130px; left: 50%;
-    transform: translateX(-50%);
+    position: fixed; z-index: 1000; top: 0; left: 0;
+    height: 100%; width: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: flex; justify-content: center; 
+}
+
+.credentials.container.inner{
+    margin-top: 130px;
+    height: 500px; width: 500px;
     background-color: #fff;
 }
+
+/* Heading */
+.credentials.container.inner .heading{
+    height: 50px; width: 100%;
+    background-color:black;
+    display: flex; align-items: center;
+}
+.credentials.container.inner .heading h3{
+    font-size: 1.1em; font-weight: 600;
+    color: white;
+    margin-left: 1vw;
+}
+.credentials.container.inner .heading button{
+    margin-left: auto; margin-right: 1vw;
+    height: 50px;
+    outline: 0; border: 0;
+    background-color: black;
+    display: flex;justify-content: center;align-items: center; overflow: hidden;
+    cursor: pointer;
+}
+.credentials.container.inner .heading button>div{
+    height: 30px;
+    width: 30px;
+    background-color: #fff;
+    display: flex; align-items: center; justify-content: center;
+}
+.credentials.container.inner .heading button img{height: 50px;}
