Changes: 	Added register form inputs. 	Made input labels move on focus.

--- a/views/src/Common/Credentials/Credentials.css
+++ b/views/src/Common/Credentials/Credentials.css
@@ -10,6 +10,7 @@
     margin-top: 130px;
     height: 500px; width: 500px;
     background-color: #fff;
+    display: flex; align-items: center; flex-direction: column;
 }
 
 /* Heading */
@@ -19,7 +20,7 @@
     display: flex; align-items: center;
 }
 .credentials.container.inner .heading h3{
-    font-size: 1.1em; font-weight: 600;
+    font-size: 1.1em; font-weight: 400;
     color: white;
     margin-left: 1vw;
 }
