--- a/views/src/Common/Credentials/Register/Register.css
+++ b/views/src/Common/Credentials/Register/Register.css
@@ -11,7 +11,7 @@
 .credentials.container.inner .register.outer form{
     width:  100%;
     margin-top: 40px;
-    display: flex; flex-direction: column; gap:20px;
+    display: flex; flex-direction: column;align-items: center; gap:20px;
 }
 
 .credentials.container.inner .register.outer div.form-element{
@@ -39,7 +39,7 @@
 
 /* Text animations */
 .credentials.container .form-element input:focus ~ label{
-    transform: scale(0.8) translate(-10px, -23px);
+    transform: scale(0.8) translate(-11px, -23px);
     background-color: white;
 }
 .credentials.container .form-element:nth-child(2) input:focus ~ label{
