Fixed label bug

--- a/views/src/Common/Credentials/Register/Register.css
+++ b/views/src/Common/Credentials/Register/Register.css
@@ -38,13 +38,18 @@
 } 
 
 /* Text animations */
+/* Email and common background*/
 .credentials.container .form-element input:focus ~ label{
     transform: scale(0.8) translate(-11px, -23px);
     background-color: white;
 }
-.credentials.container .form-element:nth-child(2) input:focus ~ label{
-    transform: scale(0.8) translate(-15px, -23px); 
+.credentials.container .form-element label.move {
+    transform: scale(0.8) translate(-11px, -23px);
+    background-color: white;
 }
-.credentials.container .form-element:nth-child(3) input:focus ~ label{
-    transform: scale(0.8) translate(-20px, -23px); 
-}
+/* Password */
+.credentials.container .form-element:nth-child(2) input:focus ~ label{transform: scale(0.8) translate(-15px, -23px);}
+.credentials.container .form-element:nth-child(2) label.move{transform: scale(0.8) translate(-15px, -23px);}
+/* Renter */
+.credentials.container .form-element:nth-child(3) input:focus ~ label{transform: scale(0.8) translate(-20px, -23px);}
+.credentials.container .form-element:nth-child(3) label.move{transform: scale(0.8) translate(-20px, -23px);}
