Added file structure to readme.md

--- a/views/src/Common/Credentials/Register/Register.css
+++ b/views/src/Common/Credentials/Register/Register.css
@@ -15,7 +15,7 @@
 }
 
 .credentials.container.inner .register.outer div.form-element{
-    width: 95%; height:35px;
+    height:35px;
     outline: 1px solid black;
     position: relative;
     display: flex; align-items: center; 
@@ -23,8 +23,8 @@
 }
 
 .credentials.container .form-element input{
-    border: 0; outline: 0; margin-left: 15px; 
-    width: 90%; height: 100%;
+    border: 0; outline: 0; padding: 0 15px;
+    width: 400px; height: 100%;
     background-color: transparent;
 }  
 .credentials.container .form-element label{
