Changes: 	-Worked on buttons on the credentials component 	-Migrated credentials component to header component instead of layout component to avoid re-rendering the entire page.

--- a/views/src/Common/Credentials/Register/Register.css
+++ b/views/src/Common/Credentials/Register/Register.css
@@ -11,7 +11,7 @@
 .credentials.container.inner .register.outer form{
     width:  100%;
     margin-top: 40px;
-    display: flex; flex-direction: column;align-items: center; gap:20px;
+    display: flex; flex-direction: column;align-items: center; 
 }
 
 .credentials.container.inner .register.outer div.form-element{
@@ -20,8 +20,33 @@
     position: relative;
     display: flex; align-items: center; 
     cursor: text;
+    margin-bottom: 20px;
 }
+.credentials.container.inner .register.outer div.form-element:last-of-type{margin-bottom: 40px}
 
+.credentials.container .register.outer .termsConditions{
+    width: 430px;
+    text-align: left;
+    font-size: 0.8em;
+}
+.credentials.container .register.outer .last{
+    width: 430px; height: 50px;
+    background-color: black;
+    color: white;
+    margin-top: 10px;
+    outline: none; border: 0;
+    cursor: pointer;
+}
+.credentials.container .register.outer .last:hover{background-color: rgb(21, 21, 21)}
+
+.credentials.container .register.outer .last.login{
+    margin-top: 5px;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: black;
+}
+.credentials.container .register.outer .last.login:hover{background-color: rgb(135, 135, 135)}
+
+/* Form inputs */
 .credentials.container .form-element input{
     border: 0; outline: 0; padding: 0 15px;
     width: 400px; height: 100%;
@@ -53,3 +78,5 @@
 /* Renter */
 .credentials.container .form-element:nth-child(3) input:focus ~ label{transform: scale(0.8) translate(-20px, -23px);}
 .credentials.container .form-element:nth-child(3) label.move{transform: scale(0.8) translate(-20px, -23px);}
+
+
