--- a/views/src/Common/Credentials/Credentials.css
+++ b/views/src/Common/Credentials/Credentials.css
@@ -4,6 +4,7 @@
     height: 100%; width: 100%;
     background-color: rgba(0, 0, 0, 0.1);
     display: flex; justify-content: center; 
+    overflow: scroll;
 }
 
 .credentials.container.inner{
