--- a/views/src/Common/MobileHeader/MobileHeader.css
+++ b/views/src/Common/MobileHeader/MobileHeader.css
@@ -72,11 +72,11 @@ header.mobile .links.inner ul{
 }
 header.mobile .links.inner li{
     width: 80%;
-    height: 2.5em; background-color: rgb(236, 236, 236);;
+    height: 2.5em; background-color: black;;
     margin-bottom: 10px;
 }
 header.mobile .links.inner li a{
+    color: white;
     display: flex;align-items: center;justify-content: center;
     height: 100%; width: 100%;
-    border: 1px solid #8f8f8f;
 }
