Made ssearch grid responsive

--- a/views/public/index.html
+++ b/views/public/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">     
     <script src="./common.js"></script>
+
+    <!-- Remove unneccessary -->
+    <link href="https://fonts.googleapis.com/css2?family=Bevan&family=Playfair+Display:wght@900&display=swap" rel="stylesheet"> 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" aria-label="Body">
