--- a/views/src/Pages/Home/Large/Large.css
+++ b/views/src/Pages/Home/Large/Large.css
@@ -37,3 +37,14 @@ section.large img{
 @media all and (max-width: 300px){
     section.large2 img{left: -15vw}
 }
+
+/* Large 1 text */
+section.large .text{
+    position: absolute; z-index: 99; top: 0; left: 0;
+    height: 100%; width: 100%;
+}
+section.large1 .text h3{
+    font-size: 6vw; color: #e71b1b ;
+    font-family: 'Playfair Display', serif;
+    /* transform: translateX(-400px) */
+}
