--- a/views/public/index.html
+++ b/views/public/index.html
@@ -3,14 +3,11 @@
   <head>
     <title>Shop</title>
     <link rel="stylesheet" href="/common.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">  -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">     
-    <script src="./common.js"></script>
 
-    <!-- Remove unneccessary -->
-    <link href="https://fonts.googleapis.com/css2?family=Bevan&family=Playfair+Display:wght@900&display=swap" rel="stylesheet"> 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" aria-label="Body">
