Fixed mobile header logo margin

--- a/views/src/Common/MobileHeader/MobileHeader.css
+++ b/views/src/Common/MobileHeader/MobileHeader.css
@@ -13,8 +13,9 @@ header.mobile nav{
 header.mobile nav>div{width: 100%;}
 
 header.mobile .logo.outer{
-    width: 50%;
+    width: auto;
     margin-right: 0;
+    margin-left: 0;
 }
 
 
