--- a/views/public/index.html
+++ b/views/public/index.html
@@ -25,7 +25,7 @@
         font-size: 70px;
         font-weight: 500;
         height: 100px;
-        didsplay: flex; justify-content: center; align-items: center;
+        display: flex; justify-content: center; align-items: center;
     }
     @media all and (max-width: 500px){
         section.loadingscreen h1{
