Fixed: HTML Loading screen and React loading screen were not in sync

--- a/views/public/index.html
+++ b/views/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Shop</title>
+    <title>GENESIS</title>
     <link rel="stylesheet" href="/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,27 +13,27 @@
     <div id="root" aria-label="Body">
       <section class="loadingscreen container outer">
         <h1>GENESIS</h1>
-    </section>
+      </section>
 
-    <style>
-    section.loadingscreen{
-        height: 100vh; width: 100%;
-        display: flex; align-items: center; justify-content: center; flex-direction: column;
-    }
-    
-    section.loadingscreen h1{
-        font-size: 70px;
-        font-weight: 500;
-        height: 100px;
-        display: flex; justify-content: center; align-items: center;
-    }
-    @media all and (max-width: 500px){
-        section.loadingscreen h1{
-            font-size: 50px;
+      <style>
+        section.loadingscreen{
+            height: 100vh; width: 100%;
+            display: flex; align-items: center; justify-content: center; flex-direction: column;
         }
-    }
+        
+        section.loadingscreen h1{
+            font-size: 70px;
+            font-weight: 500;
+            height: 100px;
+            display: flex; justify-content: center; align-items: center;
+        }
+        @media all and (max-width: 500px){
+            section.loadingscreen h1{
+                font-size: 50px;
+            }
+        }
 
-    </style>
+      </style>
     </div>
   </body>
 </html>
