--- a/views/src/Pages/Search/SearchResults/SearchResults.css
+++ b/views/src/Pages/Search/SearchResults/SearchResults.css
@@ -20,6 +20,7 @@
 @media all and (max-width: 900px){
     .searchresults.outer.container{
         grid-template-columns: repeat(2, 40vw);
+        gap: 15px;
         grid-auto-rows: 50vw;
     }
 }
